package br.com.senac.formatura.sistema_gerenciamento_formaturas.model;

public enum Perfil {
    ROLE_COMISSAO,
    ROLE_ALUNO
}