classDiagram
    class Turma {
        +Long id
        +String nome
        +String curso
        +String instituicao
        +Double totalArrecadado
        +Double metaArrecadacao
        +String status
        +Integer getQuantidadeAlunos()
    }

    class Aluno {
        +Long id
        +String nome
        +String identificador
        +String contato
        +String status
        +String getNomeTurma()
    }

    class Usuario {
        +Long id
        +String login
        +String email
        +String senha
        +Perfil perfil
        +String getUsername()
    }

    class Evento {
        +Long id
        +String nome
        +LocalDate dataEvento
        +String localEvento
        +String status
    }

    class PresencaEvento {
        +Long id
        +String status
    }

    class LancamentoFinanceiro {
        +Long id
        +String descricao
        +String tipo
        +Boolean contribuicao
        +String apoiadorNome
        +Double valor
        +LocalDate dataLancamento
        +String referencia
    }

    class Votacao {
        +Long id
        +String titulo
        +String status
        +LocalDate dataFim
    }

    class OpcaoVotacao {
        +Long id
        +String nomeFornecedor
        +String detalhesProposta
        +Double valorProposta
    }

    class Voto {
        +Long id
        +LocalDateTime dataVoto
    }

    class Tarefa {
        +Long id
        +String titulo
        +String descricao
        +String status
        +LocalDate dataLimite
    }

    class Perfil {
        <<enumeration>>
        ROLE_COMISSAO
        ROLE_ALUNO
    }

    Turma "1" --> "*" Aluno : possui
    Turma "1" --> "*" Evento : agenda
    Turma "1" --> "*" LancamentoFinanceiro : consolida
    Turma "1" --> "*" Votacao : promove
    Turma "1" --> "*" Tarefa : organiza

    Aluno "1" --> "0..1" Usuario : credencial
    Aluno "1" --> "*" Voto : registra
    Aluno "1" --> "*" PresencaEvento : responde
    Aluno "0..1" --> "*" Tarefa : responsavel
    Aluno "0..1" --> "*" LancamentoFinanceiro : referencia opcional

    Evento "1" --> "*" PresencaEvento : recebe
    Votacao "1" --> "*" OpcaoVotacao : contem
    Votacao "1" --> "*" Voto : recebe
    OpcaoVotacao "1" --> "*" Voto : escolhida em

    Usuario --> Perfil
